added LIOP details

--- a/deep_conv_net_survey/main.tex
+++ b/deep_conv_net_survey/main.tex
@@ -242,58 +242,7 @@ This paper attempts to provide a  review of research on deep convolutional netwo
 %          spconf.sty  - ICASSP/ICIP LaTeX style file, and
 %          IEEEbib.bst - IEEE bibliography style file.
 % --------------------------------------------------------------------------
-\documentclass{article}
-
-\usepackage{spconf,amsmath,graphicx}
-\usepackage{caption}
-
-
-
-
-% Example definitions.
-% --------------------
-\def\x{{\mathbf x}}
-\def\L{{\cal L}}
-
-% Title.
-% ------
-\title { On Deep Convolutional networks for large scale image classification}
-%
-% Single address.
-% ---------------
-\name{Mahesh C., Student Member, IEEE, Madhu S. Nair, Member, IEEE}
-\address{Department of Computer Science, University of Kerala, Kariavattom\\ Thiruvananthapuram-695581,
-	Kerala, India.
-}
-%
-% For example:
-% ------------
-%\address{School\\
-%	Department\\
-%	Address}
-%
-% Two addresses (uncomment and modify for two-address case).
-% ----------------------------------------------------------
-%\twoauthors
-%  {A. Author-one, B. Author-two\sthanks{Thanks to XYZ agency for funding.}}
-%	{School A-B\\
-%	Department A-B\\
-%	Address A-B}
-%  {C. Author-three, D. Author-four\sthanks{The fourth author performed the work
-%	while at ...}}
-%	{School C-D\\
-%	Department C-D\\
-%	Address C-D}
-%
-
-\begin{document}
-\topmargin=0mm 
-%\ninept
-%
-\maketitle
-%
-\begin{abstract}
-Image classification is an essential to the field of computer vision  based systems and recent research in this area explores better feature extraction, feature coding, and classification.  The purpose of this paper is to review the application of supervised  deep convolution networks in this field. Numerous techniques have been reported to improve the performance of the convolution networks. Experimental analysis shows that with a large amount of labeled data, convolution networks can learn very complex functions such as image classification. 
+explores better feature extraction, feature coding, and classification.  The purpose of this paper is to review the application of supervised  deep convolution networks in this field. Numerous techniques have been reported to improve the performance of the convolution networks. Experimental analysis shows that with a large amount of labeled data, convolution networks can learn very complex functions such as image classification. 
 
 
 
